2008-02-18  Alp Toker  <alp@atoker.com>

        Build fix for GTK+ < 2.10. Fall back to simple text clipboard copy
        with older GTK+ versions for now.

        * platform/gtk/PasteboardGtk.cpp:
        (WebCore::Pasteboard::writeSelection):

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * WebCore.base.exp: Export a couple of WebCore::String functions we plan to use
        in the future in WebKit.

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        * DerivedSources.make: Added the scripts to the ENABLE_SVG versions of the rules
        for CSSPropertyNames.h and CSSValueKeywords.h. Somehow that got left out, so the
        files would not be regenerated if the scripts were changed (but would if SVG was
        disabled).

2008-02-18  Alexey Proskuryakov  <ap@webkit.org>

        Suggested by Darin.

        * platform/KURL.h: (WebCore::KURL::operator const String&): Added, to avoid unexpected
        conversion via UString (as in bug 17418).

2008-02-18  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Darin.

        <rdar://problem/5744899> Crash in Flash when clicking "Yes" to abort
        slow script Flash 9 dialog at http://www.kidzui.com

        When navigating to a new page, we stop all outstanding PluginStreams.
        Flash hangs in the call to NPP_URLNotify. It eventually displays the
        "slow script" dialog, which relinquishes control to the system. While
        this dialog is running, the request we are in the process of cancelling
        completes, and we re-enter Flash to deliver the data. When the dialog
        is dismissed, the internal state of Flash has changed, and Flash
        crashes with a null dereference.

        To work around this, we can defer loading before entering plug-in code,
        so that even if a plug-in yields to the system, we won't get callbacks
        while we're handling a callback.

        * plugins/PluginStream.cpp: